WEB: Fix display of Language tab on Firefox
"Language" overflowed and wasn't visible.

--- a/css/lang-menu.css
+++ b/css/lang-menu.css
@@ -1,10 +1,9 @@
 #lang-wrapper {
-	width: 0px;
 	margin: 0 auto;
 	float: right;
 	position: relative;
-	right: 620px;
 	top: 79px;
+	margin-right: 10px;
 }
 
 code.text-badge {
@@ -33,7 +32,8 @@ code.text-badge {
 #langmenu > li {
 	float: left;
 	height: 29px;
-	width: 115px;
+	padding-right: 2px;
+	margin-right: 10px;
 	margin-top: 0pt;
 	margin-bottom: 0pt;
 	position: relative;
@@ -62,7 +62,6 @@ code.text-badge {
 	position: absolute;
 	top: 27px;
 	left: 0px;
-	width: 105px;
 	border-radius: 0 0 4px 4px;
 	-moz-border-radius: 0 0 4px 4px;
 	-webkit-border-radius: 0 0 4px 4px;
@@ -86,7 +85,6 @@ code.text-badge {
 
 #langmenu li ul li {
 	float: left;
-	width: 115px;
 	list-style: none;
 	margin: 0 5px 7px 0;
 	padding: 0 0 3px 0;
